--- a/Session02/bai07.html
+++ b/Session02/bai07.html
@@ -6,56 +6,52 @@
     <title>Bài 7</title>
 </head>
 <body>
-    <table border="1" cellspacing="0" width="100%">
+    <table border="1" cellspacing="0" cellpadding="10" width="100%">
         
         <tr>
-            <th colspan="4">QUẢN LÝ SINH VIÊN</th>
+            <th>Ảnh</th>
+            <th>Tên</th>
+            <th>Môn học</th>
         </tr>
 
         <tr>
-            <th>ID</th>
-            <th>Họ và tên</th>
-            <th>Điểm</th>
-            <th>Xếp loại</th>
+            <td align="center">
+                <img src="teacher_quy.png" width="100px" height="100px">
+            </td>
+            <td>Thầy Ngọ Văn Quý</td>
+            <td>Lập trình C/C++</td>
         </tr>
 
         <tr>
-            <th colspan="4">Khóa A</th>
+            <td align="center">
+                <img src="teacher_hai.png" width="100px" height="100px">
+            </td>
+            <td>Thầy Nguyễn Quốc Hai</td>
+            <td>Lập trình Python</td>
         </tr>
-
-        <tr align="center">
-            <td>1</td>
-            <td>Trần Xuân Son</td>
-            <td>7</td>
-            <td>Khá</td>
-        </tr>
-        <tr align="center">
-            <td>2</td>
-            <td>Nguyễn Xuân Son</td>
-            <td>8</td>
-            <td></td> </tr>
 
         <tr>
-            <th colspan="4">Khóa B</th>
+            <td align="center">
+                <img src="teacher_quy.png" width="100px" height="100px">
+            </td>
+            <td>Thầy Ngọ Văn Quý</td>
+            <td>Lập trình Java</td>
         </tr>
 
-        <tr align="center">
-            <td>3</td>
-            <td>Trịnh Xuân Son</td>
-            <td>5</td>
-            <td>Trung bình</td>
-        </tr>
-        <tr align="center">
-            <td>4</td>
-            <td>Hoàng Xuân Son</td>
-            <td>10</td>
-            <td>Giỏi</td>
+        <tr>
+            <td align="center">
+                <img src="teacher_hai.png" width="100px" height="100px">
+            </td>
+            <td>Thầy Nguyễn Quốc Hai</td>
+            <td>Lập trình Web</td>
         </tr>
 
-        <tr align="center">
-            <th colspan="2">TỔNG CỘNG</th>
-            <td>7.5</td>
-            <td>Khá</td>
+        <tr>
+            <td align="center">
+                <img src="teacher_hai.png" width="100px" height="100px">
+            </td>
+            <td>Thầy Nguyễn Quốc Hai</td>
+            <td>Cơ sở dữ liệu</td>
         </tr>
 
     </table>
