Refactor HTML for student management table
Updated the HTML structure and styling of the student management table.

--- a/Session02/bai08.html
+++ b/Session02/bai08.html
@@ -6,11 +6,9 @@
     <title>Bài 8</title>
 </head>
 <body>
-    <table border="1" width="100%" cellpadding="5">
-        
-        <tr>
-            <th colspan="4" style="font-size: 18px;">QUẢN LÝ SINH VIÊN</th>
-        </tr>
+    <table border="1" cellspacing="0" width="30%" cellpadding="5">
+
+        <caption><strong>QUẢN LÝ SINH VIÊN</strong></caption>
 
         <tr>
             <th width="10%">ID</th>
