--- a/Session04/miniproject.html
+++ b/Session04/miniproject.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Thất Bại Là Mẹ Thành Công</h1>
     <p>
-      Đây là một câu nói ý nghĩa về thất bại &amp; thành công trong cuộc sống.
+      Đây là một câu nói ý nghĩa về thất bại thành công trong cuộc sống.
 
     <h2>Ý Nghĩa Chính</h2>
     <p>
@@ -68,12 +68,10 @@
       <li><u>Điều chỉnh kế hoạch</u>: Thất bại cung cấp thông tin quý giá để bạn cải tiến và thử nghiệm lại kế hoạch của mình, từ đó tìm ra cách làm đúng.</li>
       <li><u>Tiếp tục kiên trì</u>: Đừng bao giờ bỏ cuộc. Thất bại không phải là dấu chấm hết mà là cơ hội để bạn thử lại với sự kiên trì và nỗ lực hơn.</li>
     </ol>
-
-    <hr />
-
     <p>
       Bài viết này giúp bạn hiểu <mark>tại sao thất bại không phải là xấu</mark>, 
       mà là một phần thiết yếu để hướng tới thành công (<a href="https://vietjack.com/van-mau-lop-12/nghi-luan-xa-hoi-that-bai-la-me-thanh-cong-vm2025.jsp?utm_source=chatgpt.com" target="_blank" rel="noopener noreferrer">Tài liệu tham khảo</a>).
     </p>
   </body>
 </html>
+
