--- a/Session04/miniproject.html
+++ b/Session04/miniproject.html
@@ -54,7 +54,7 @@
 
     <h2>Ví Dụ Cụ Thể</h2>
     <p>
-      Khi bạn làm một việc mới — ví dụ như kinh doanh, học kỹ năng, hoặc làm dự án — bạn có thể thất bại ban đầu. Nhưng qua mỗi lần sai, bạn 
+      Khi bạn làm một việc mới - ví dụ như kinh doanh, học kỹ năng, hoặc làm dự án - bạn có thể thất bại ban đầu. Nhưng qua mỗi lần sai, bạn 
       học được điều mới và chuẩn bị tốt hơn cho bước tiếp theo.
     </p>
 
@@ -74,5 +74,6 @@
     </p>
   </body>
 </html>
+
 
 
