--- a/Session04/miniproject.html
+++ b/Session04/miniproject.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Thất Bại Là Mẹ Thành Công</title>
+    <title>Mini project</title>
   </head>
 
   <body>
@@ -74,6 +74,7 @@
     </p>
   </body>
 </html>
+
 
 
 
