--- a/Session06/test_project.html
+++ b/Session06/test_project.html
@@ -13,15 +13,10 @@
     </header>
 
     <nav>
-        <div class="nav-container">
-            <a href="#">Trang chủ</a>
-            <span>|</span>
-            <a href="#">Giới thiệu</a>
-            <span>|</span>
-            <a href="#">Bác sĩ</a>
-            <span>|</span>
-            <a href="#">Liên hệ</a>
-        </div>
+        <a href="#">Trang chủ</a> | 
+        <a href="#">Giới thiệu</a> | 
+        <a href="#">Bác sĩ</a> | 
+        <a href="#">Liên hệ</a>
     </nav>
 
     <main>
@@ -42,9 +37,21 @@
                 <li>3. Bác sĩ Lê Văn C – Nha khoa trẻ em</li>
             </ul>
         </section>
+
+        <section class="commitment">
+            <h2>Uy tín & cam kết</h2>
+            <ul>
+                <li>Bác sĩ có chứng chỉ hành nghề</li>
+                <li>Thiết bị hiện đại</li>
+                <li>Hơn 10.000 khách hàng tin tưởng</li>
+            </ul>
+        </section>
     </main>
 
-    <footer></footer>
+    <footer>
+        <p>© 2026 Trung tâm Nha khoa uy tín</p>
+        <p>Hotline: 0900 111 222</p>
+    </footer>
 
 </body>
 </html>
